fixed horizontal track covering bug

--- a/src/styles/about_me_image_track.css
+++ b/src/styles/about_me_image_track.css
@@ -1,4 +1,6 @@
 #horizontal-image-track {
+    pointer-events: none;
+    user-select: none;
     display: flex;
     gap: 4vmin;
     position: absolute;
